demo/konvoy/demo-virtual-event/migration/ingresses.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  creationTimestamp: null
  name: kommander-kubeaddons
  namespace: kommander
spec:
  entryPoints: []
  routes:
  - kind: Rule
    match: PathPrefix(`/ops/portal/kommander`)
    middlewares: []
    priority: 0
    services:
    - name: kommander
      port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  creationTimestamp: null
  name: dex-k8s-authenticator-kubeaddons
  namespace: kubeaddons
spec:
  entryPoints: []
  routes:
  - kind: Rule
    match: PathPrefix(`/token`)
    middlewares: []
    priority: 0
    services:
    - name: dex-k8s-authenticator-kubeaddons
      port: 5555
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  creationTimestamp: null
  name: dex-kubeaddons
  namespace: kubeaddons
spec:
  entryPoints: []
  routes:
  - kind: Rule
    match: PathPrefix(`/dex`)
    middlewares: []
    priority: 0
    services:
    - name: dex-kubeaddons
      port: 8080
      scheme: https
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  creationTimestamp: null
  name: opsportal-kubeaddons-addons
  namespace: kubeaddons
spec:
  entryPoints: []
  routes:
  - kind: Rule
    match: PathPrefix(`/ops/portal/kubernetes`)
    middlewares:
    - name: /ops/portal/kubernetes
      namespace: kubeaddons
    - name: auth-15150105191948944104
      namespace: kubeaddons
    priority: 2
    services:
    - name: bearerproxy
      port: 9091
  - kind: Rule
    match: PathPrefix(`/ops/portal/kibana`)
    middlewares:
    - name: /ops/portal/kibana
      namespace: kubeaddons
    - name: auth-15150105191948944104
      namespace: kubeaddons
    priority: 2
    services:
    - name: kibana-kubeaddons
      port: 5601
  - kind: Rule
    match: PathPrefix(`/ops/portal/grafana`)
    middlewares:
    - name: /ops/portal/grafana
      namespace: kubeaddons
    - name: auth-15150105191948944104
      namespace: kubeaddons
    priority: 2
    services:
    - name: prometheus-kubeaddons-grafana
      port: 3000
  - kind: Rule
    match: PathPrefix(`/ops/portal/prometheus`)
    middlewares:
    - name: /ops/portal/prometheus
      namespace: kubeaddons
    - name: auth-15150105191948944104
      namespace: kubeaddons
    priority: 2
    services:
    - name: prometheus-kubeaddons-prom-prometheus
      port: 9090
  - kind: Rule
    match: PathPrefix(`/ops/portal/alertmanager`)
    middlewares:
    - name: /ops/portal/alertmanager
      namespace: kubeaddons
    - name: auth-15150105191948944104
      namespace: kubeaddons
    priority: 2
    services:
    - name: prometheus-kubeaddons-prom-alertmanager
      port: 9093
  - kind: Rule
    match: PathPrefix(`/ops/portal/traefik`)
    middlewares:
    - name: /ops/portal/traefik
      namespace: kubeaddons
    - name: auth-15150105191948944104
      namespace: kubeaddons
    priority: 2
    services:
    - name: traefik-kubeaddons-dashboard
      port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  creationTimestamp: null
  name: /ops/portal/alertmanager
  namespace: kubeaddons
spec:
  stripPrefix:
    prefixes:
    - /ops/portal/alertmanager
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  creationTimestamp: null
  name: /ops/portal/grafana
  namespace: kubeaddons
spec:
  stripPrefix:
    prefixes:
    - /ops/portal/grafana
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  creationTimestamp: null
  name: /ops/portal/kibana
  namespace: kubeaddons
spec:
  stripPrefix:
    prefixes:
    - /ops/portal/kibana
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  creationTimestamp: null
  name: /ops/portal/kubernetes
  namespace: kubeaddons
spec:
  stripPrefix:
    prefixes:
    - /ops/portal/kubernetes
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  creationTimestamp: null
  name: /ops/portal/prometheus
  namespace: kubeaddons
spec:
  stripPrefix:
    prefixes:
    - /ops/portal/prometheus
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  creationTimestamp: null
  name: /ops/portal/traefik
  namespace: kubeaddons
spec:
  stripPrefix:
    prefixes:
    - /ops/portal/traefik
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  creationTimestamp: null
  name: auth-15150105191948944104
  namespace: kubeaddons
spec:
  forwardAuth:
    address: http://traefik-forward-auth-kubeaddons.kubeaddons.svc.cluster.local:4181/
    authResponseHeaders:
    - X-Forwarded-User
    tls: {}
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  creationTimestamp: null
  name: opsportal-kubeaddons-kommander
  namespace: kubeaddons
spec:
  entryPoints: []
  routes:
  - kind: Rule
    match: PathPrefix(`/ops/portal/`)
    middlewares:
    - name: /ops/portal/
      namespace: kubeaddons
    - name: auth-15150105191948944104
      namespace: kubeaddons
    priority: 1
    services:
    - name: opsportal
      port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  creationTimestamp: null
  name: /ops/portal/
  namespace: kubeaddons
spec:
  stripPrefix:
    prefixes:
    - /ops/portal/
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  creationTimestamp: null
  name: auth-15150105191948944104
  namespace: kubeaddons
spec:
  forwardAuth:
    address: http://traefik-forward-auth-kubeaddons.kubeaddons.svc.cluster.local:4181/
    authResponseHeaders:
    - X-Forwarded-User
    tls: {}
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  creationTimestamp: null
  name: opsportal-landing
  namespace: kubeaddons
spec:
  entryPoints: []
  routes:
  - kind: Rule
    match: Path(`/ops/landing`)
    middlewares: []
    priority: 0
    services:
    - name: opsportal-landing
      port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  creationTimestamp: null
  name: traefik-forward-auth-kubeaddons
  namespace: kubeaddons
spec:
  entryPoints: []
  routes:
  - kind: Rule
    match: PathPrefix(`/_oauth`)
    middlewares:
    - name: auth-4914048052979730971
      namespace: kubeaddons
    priority: 0
    services:
    - name: traefik-forward-auth-kubeaddons
      port: 0
      scheme: https
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  creationTimestamp: null
  name: auth-4914048052979730971
  namespace: kubeaddons
spec:
  forwardAuth:
    address: http://traefik-forward-auth-kubeaddons.kubeaddons.svc.cluster.local:4181/
    tls: {}
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  creationTimestamp: null
  name: traefik-kubeaddons-dashboard
  namespace: kubeaddons
spec:
  entryPoints: []
  routes:
  - kind: Rule
    match: Host(`traefik.localhost.localdomain`)
    middlewares: []
    priority: 0
    services:
    - name: traefik-kubeaddons-dashboard
      port: 0
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  creationTimestamp: null
  name: webapp
  namespace: webapp
spec:
  entryPoints: []
  routes:
  - kind: Rule
    match: PathPrefix(`/webapp`)
    middlewares: []
    priority: 0
    services:
    - name: webapp
      port: 80
